[package]
name = "noak"
version = "0.4.0"
authors = ["frozolotl <frozolotl@protonmail.com>"]
edition = "2021"
description = "A library for reading and writing java bytecode fast"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/noak"
repository = "https://gitlab.com/frozo/noak"
categories = ["parser-implementations", "encoding"]
keywords = ["java", "jvm", "class", "bytecode"]

[dependencies]
bitflags = "1.3.2"
indexmap = "1.8.1"
