[package]
name = "noak"
version = "0.5.0"
authors = ["frozolotl <frozolotl@protonmail.com>"]
categories = ["parser-implementations", "encoding"]
description = "A library for reading and writing java bytecode fast"
documentation = "https://docs.rs/noak"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["java", "jvm", "class", "bytecode"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/frozo/noak"

[dependencies]
bitflags = "1.3.2"
indexmap = "1.8.1"
