[package]
name = "noak"
version = "0.6.1"
authors = ["frozolotl <frozolotl@protonmail.com>"]
categories = ["parser-implementations", "encoding"]
description = "A library for reading and writing java class files"
documentation = "https://docs.rs/noak"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["java", "jvm", "class", "bytecode"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/frozo/noak"
rust-version = "1.79.0"

[dependencies]
bitflags = "1.3.2"
indexmap = "1.8.2"
