
[package]
name = "noak-fuzz"
version = "0.0.1"
authors = []
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.noak]
path = ".."
[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "mutf8"
path = "fuzz_targets/mutf8.rs"
